# UniversityTWOW

./: .gitignore  README.md  main.py  pyproject.toml  secrets.json
bot/: dm.py  roles.py  secret.py
core/: bot.py  data.py  web.py
static/css/: base.css  form.css  page.css
static/js/: base.js  form.js  page.js  secret.js  secret_page.js  voting.js
templates/: 403.html  404.html  500.html  application.html  base.html  class_page.html  classes.html  decision.html  form.html  index.html  link_page.html  register.html  secret.html  testing.html  timer.html  transcript.html  voting.html
templates/application/: 1.html  2.html  3.html  4.html  5.html  decision.html  page.html  update.html
templates/classes/: class_page.html  link_page.html  link_upload.html
templates/classes/class_page/: link_page.html  link_upload.html  secret_page.html
templates/classes/class_page/link_page/: submission_page.html  submission_upload.html
templates/testing/MATH141/final/: 1.html  2.html  3.html  4.html  5.html  6.html  test.json
templates/testing/MATH141/midterm/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  test.json
web/: admin.py  application.py  classes.py  database.py  index.py  logs.py  misc.py  oauth.py  override.py  permissions.py  registration.py  secret.py  site.py  testing.py  voting.py
web/archived/: registration.py
