[tool.poetry]
name = "repl_python3_UniversityTWOW"
version = "0.1.0"
description = ""
authors = ["LucasLaBuff <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-discord = "^0.1.64"
flask = "^2.0.1"
replit = "^3.1.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
