[tool.poetry]
name = "UniversityTWOW"
version = "0.1.0"
description = ""
authors = ["LucasLaBuff <<lucasbeef00@gmail.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-discord = "^0.1.64"
flask = "^2.0.1"
replit = "^3.1.0"
oauthlib = "^3.1.1"
discord = "2.3.0"
urllib3 = "1.26.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
